# WebsiteBuilder

./: .replit  app.py  forms.py  launch.py  main.py  models.py  pyproject.toml  run.sh
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content--1746466151902.txt
static/css/: styles.css
static/js/: application-manager.js  main.js
templates/: about.html  base.html  contact.html  index.html  login.html
utils/: openai_helper.py
web/: app.py
web/static/css/: contact.css  index.css  login.css  micro-interactions.css  welcome.css
web/static/js/: micro-interactions.js
web/templates/: about.html  base.html  check_status.html  contact.html  dashboard.html  forgot_password.html  index.html  login.html  submit_application.html  view_application.html  welcome_message.html
web/templates/word_processor/: index.html
word_processer/: doc.html
