[tool.poetry]
name = "tenyeshi-portfolio"
version = "0.1.0"
description = "A dynamic personal portfolio website for Ten Yeshi using Flask"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
gunicorn = "^21.2.0"
flask-sqlalchemy = "^3.1.1"
psycopg2-binary = "^2.9.10"
flask-login = "^0.6.3"
flask-wtf = "^1.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"